--- a/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/src/Components/GlobalStyles/GlobalStyles.scss
@@ -3,6 +3,7 @@
 
 :root {
     --primary: #fe2c55;
+    --text-color: #333;
 
     // default layout
     --default-layout-header-height: 60px;
@@ -24,4 +25,16 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+}
+
+button,
+input,
+[tabIndex] {
+    border: none;
+    outline: none;
+}
+
+a[href] {
+    color: var(--primary);
+    text-decoration: none;
 }
