--- a/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/src/Components/GlobalStyles/GlobalStyles.scss
@@ -3,7 +3,8 @@
 
 :root {
     --primary: #fe2c55;
-    --text-color: #333;
+    --text-color: rgb(22, 24, 35);
+    --white: #fff;
 
     // default layout
     --default-layout-header-height: 60px;
