--- a/src/Components/Layouts/Components/Header/Header.module.scss
+++ b/src/Components/Layouts/Components/Header/Header.module.scss
@@ -23,11 +23,16 @@
 .logo {
     min-width: 300px;
 }
+
+.search,
+.search-result {
+    width: 516px;
+}
+
 .search {
     position: relative;
     min-width: 200px;
     padding-left: 16px;
-    width: 516px;
     height: var(--search-height);
     display: flex;
     background-color: rgba(22, 24, 35, 0.06);
@@ -61,6 +66,14 @@
         border-color: rgba(22, 24, 35, 0.2);
     }
 }
+
+.search-title {
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+}
+
 .clear,
 .loading {
     position: absolute;
@@ -84,4 +97,8 @@
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
     }
+}
+
+.custom-login {
+    color: red;
 }
