--- a/src/Components/Button/Button.module.scss
+++ b/src/Components/Button/Button.module.scss
@@ -5,7 +5,7 @@
     font-size: 1.6rem;
     font-weight: 700;
     min-width: 100px;
-    padding: 7px 9px;
+    padding: 5px 8px;
     border-radius: 4px;
     cursor: pointer;
     background-color: var(--white);
@@ -27,8 +27,18 @@
     margin-left: 8px;
 }
 
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
+
 // Button type
 .rounded {
+    font-size: 1.4rem;
+    min-width: 90px;
+
+    color: rgba(22, 24, 35, 0.75);
     border-radius: 999px;
     box-shadow: 0 2px 8px rgb(0 0 0 / 6%);
     border-color: rgba(22, 24, 35, 0.12);
@@ -50,6 +60,9 @@
 }
 
 .outline {
+    min-width: 96px;
+    border-radius: 2px;
+    font-weight: 500;
     color: var(--primary);
     border-color: currentColor;
 
@@ -60,6 +73,10 @@
 }
 
 .text {
+    min-width: 110px;
+    padding: 5px 16px;
+    font-weight: 500;
+    border-radius: 2px;
     color: var(--text-color);
     border-color: rgba(22, 24, 35, 0.12);
 
