--- a/src/Components/Layouts/Components/Header/Header.module.scss
+++ b/src/Components/Layouts/Components/Header/Header.module.scss
@@ -102,3 +102,11 @@
 .custom-login {
     color: red;
 }
+
+.more-btn {
+    font-size: 2rem;
+    margin-left: 28px;
+    padding: 4px 8px;
+    cursor: pointer;
+    background-color: transparent;
+}
