--- a/src/Components/Layouts/Components/Header/Header.module.scss
+++ b/src/Components/Layouts/Components/Header/Header.module.scss
@@ -103,10 +103,32 @@
     color: red;
 }
 
+// Action
+.action {
+    display: flex;
+    align-items: center;
+}
+
 .more-btn {
     font-size: 2rem;
     margin-left: 28px;
     padding: 4px 8px;
     cursor: pointer;
     background-color: transparent;
+}
+
+.action-btn {
+    font-size: 2.4rem;
+    padding: 4px 12px;
+    color: #161823;
+    background: transparent;
+}
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    margin-left: 12px;
+    object-fit: cover;
+    border-radius: 50%;
+    cursor: pointer;
 }
