hoàn thiện header

--- a/src/Components/Layouts/Components/Header/Header.module.scss
+++ b/src/Components/Layouts/Components/Header/Header.module.scss
@@ -4,12 +4,17 @@
     --search-top-spacer: 9px;
     --search-button-width: 52px;
 
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: var(--white);
     height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 0 24px 0 12px;
+    padding: 0 24px 0 16px;
 }
 
 .inner {
@@ -22,6 +27,10 @@
 
 .logo {
     min-width: 300px;
+
+    .logo-link {
+        display: flex;
+    }
 }
 
 .custom-login {
