--- a/src/Components/Layouts/Components/Search/Search.module.scss
+++ b/src/Components/Layouts/Components/Search/Search.module.scss
@@ -8,6 +8,7 @@
     min-width: 200px;
     padding-left: 16px;
     height: var(--search-height);
+    font-family: 'IBM Plex Sans', sans-serif;
     display: flex;
     background-color: rgba(22, 24, 35, 0.06);
     border-radius: var(--search-border-radius);
